[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Edward Pierzchalski <e.a.pierzchalski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.2"
lazy_static = "1.4.0"
petgraph = "0.4.13"
itertools = "0.8.2"
